--- a/src/template.html
+++ b/src/template.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=add_task,create_new_folder,folder,list" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=add_task,create_new_folder,delete,edit,folder,info,list" />
     <title>Todo List</title>
   </head>
   <body>
@@ -43,7 +42,7 @@
         </li>
       </ul>
       <div id="actions">
-        <span class="material-symbols-outlined action-icon">create_new_folder</span>
+        <span id="new-project-btn" class="material-symbols-outlined action-icon">create_new_folder</span>
         <span class="material-symbols-outlined action-icon">add_task</span>
       </div>
     </nav>
@@ -51,22 +50,58 @@
       <div class="project">
         <h1>Today</h1>
         <ul class="todo-list">
-          <li>
-            <div class="checkbox"></div>
-            <p>Master the art of speaking llama language.</p>
+          <li class="todo">
+            <div class="todo-label">
+              <div class="todo-title">
+                <div class="checkbox"></div>
+                <p>Master the art of speaking llama language.</p>
+              </div>
+              <div class="todo-actions">
+                <div class="priority-indicator-low"></div>
+                <p>07/30/2025</p>
+                <span class="material-symbols-outlined">edit</span>
+                <span class="material-symbols-outlined">delete</span>
+                <!-- <span class="material-symbols-outlined">info</span> -->
+              </div>
+            </div>
+            <p class="todo-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque porta turpis a eros ultricies, sit amet sodales sapien ultrices. Fusce lobortis feugiat erat vel efficitur. Nam rutrum ac ipsum eget eleifend</p>
           </li>
-          <li>
-            <div class="checkbox"></div>
-            <p>Conquer Mount Everest using a pogo stick.</p>
+          <li class="todo">
+            <div class="todo-label">
+              <div class="todo-title">
+                <div class="checkbox"></div>
+                <p>Conquer Mount Everest using a pogo stick.</p>
+              </div>
+              <div class="todo-actions">
+                <div class="priority-indicator-medium"></div>
+                <p>08/04/2025</p>
+                <span class="material-symbols-outlined">edit</span>
+                <span class="material-symbols-outlined">delete</span>
+                <!-- <span class="material-symbols-outlined">info</span> -->
+              </div>
+            </div>
+            <p class="todo-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque porta turpis a eros ultricies, sit amet sodales sapien ultrices.</p>
           </li>
-          <li>
-            <div class="checkbox checked"></div>
-            <p class="linethrough">Bake a cake made entirely made of rainbows and unicorns.</p>
+          <li class="todo">
+            <div class="todo-label">
+              <div class="todo-title">
+                <div class="checkbox checked"></div>
+                <p class="linethrough">Bake a cake made entirely made of rainbows and unicorns.</p>
+              </div>
+              <div class="todo-actions">
+                <div class="priority-indicator-high"></div>
+                <p>08/13/2025</p>
+                <span class="material-symbols-outlined">edit</span>
+                <span class="material-symbols-outlined">delete</span>
+                <!-- <span class="material-symbols-outlined">info</span> -->
+              </div>
+            </div>
+            <p class="todo-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </li>
         </ul>
       </div>
     </main>
-    <dialog>
+    <dialog id="new-project-modal">
       <form action=""></form>
     </dialog>
   </body>
